--- a/03.정적페이지크롤링/12.예외상황.ipynb
+++ b/03.정적페이지크롤링/12.예외상황.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "# header 옵션\n",
     "header = {\n",
-    "    'User-Agent' : 'Mozila/5.0'\n",
+    "    'User-Agent' : 'Mozila/5.0',\n",
+    "    'referer' : '???'\n",
     "}\n",
     "\n",
     "response = requests.get(\"https://n.news.naver.com/mnews/article/277/0005169230?sid=102\", headers=header)\n",
