--- a/08.프로젝트/01.연관검색어크롤링.ipynb
+++ b/08.프로젝트/01.연관검색어크롤링.ipynb
@@ -2,23 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "유튜브 광고\n",
-      "유튜브 검은화면\n",
-      "유튜브 고객센터\n",
-      "유튜브 검색기록\n",
-      "유튜브 광고 제거\n",
-      "유튜브 검은색\n",
-      "유튜브 검색기록 삭제\n",
-      "유튜브 검정\n",
-      "유튜브 검색어\n",
-      "유튜브 검색\n"
+      "인스타그램 계정삭제\n",
+      "인스타그램 고객센터\n",
+      "인스타그램 광고\n",
+      "인스타그램 계정\n",
+      "인스타그램 계정 차단\n",
+      "인스타그램 계정 일시차단\n",
+      "인스타그램 계정 정지\n",
+      "인스타그램 가입\n",
+      "인스타그램 글씨체\n",
+      "인스타그램 계정 잠김\n",
+      "인스타그램 노래\n",
+      "인스타그램 누끼\n",
+      "인스타그램 노트\n",
+      "인스타그램 나무위키\n",
+      "인스타그램 나가짐\n",
+      "인스타그램 닉네임\n",
+      "인스타그램 나만보기\n",
+      "인스타그램 나중에 다시 시도하세요\n",
+      "인스타그램 딘\n",
+      "인스타그램 디엠\n",
+      "인스타그램 답장\n",
+      "인스타그램 돋보기\n",
+      "인스타그램 댓글\n",
+      "인스타그램 동의\n",
+      "인스타그램 디엠 알림\n",
+      "인스타그램 다운로드\n",
+      "인스타그램 디엠 답장\n",
+      "인스타그램 다운\n",
+      "인스타그램 링크\n",
+      "인스타그램 로그인 오류\n",
+      "인스타그램 로그인\n",
+      "인스타그램 로고\n",
+      "인스타그램 릴스\n",
+      "인스타그램 링크 오류\n",
+      "인스타그램 리그램\n",
+      "인스타그램 로그아웃\n",
+      "인스타그램 링크추가\n",
+      "인스타그램 로딩\n",
+      "인스타그램 메모\n",
+      "인스타그램 문의\n",
+      "인스타그램 메타\n",
+      "인스타그램 메세지\n",
+      "인스타그램 메일\n",
+      "인스타그램 마케팅\n",
+      "인스타그램 몰래보기\n",
+      "인스타그램 모바일\n",
+      "인스타그램 문제신고\n",
+      "인스타그램 메시지\n",
+      "인스타그램 비활성화\n",
+      "인스타그램 비밀번호 찾기\n",
+      "인스타그램 비공개\n",
+      "인스타그램 비밀번호 변경\n",
+      "인스타그램 비밀번호\n",
+      "인스타그램 부계정\n",
+      "인스타그램 복구\n",
+      "인스타그램 본사\n",
+      "인스타그램 방문확인\n",
+      "인스타그램 보안코드\n",
+      "인스타그램 스토리\n",
+      "인스타그램 사용자\n",
+      "인스타그램 삭제\n",
+      "인스타그램 신고\n",
+      "인스타그램 사이즈\n",
+      "인스타그램 스토리 몰래보기\n",
+      "인스타그램 스토리 오류\n",
+      "인스타그램 숨기기\n",
+      "인스타그램 신규\n",
+      "인스타그램 스토리 사이즈\n",
+      "인스타그램 오류\n",
+      "인스타그램 일시차단\n",
+      "인스타그램 아이디\n",
+      "인스타그램 익명\n",
+      "인스타그램 영어\n",
+      "인스타그램 이모티콘\n",
+      "인스타그램 언어\n",
+      "인스타그램 이름\n",
+      "인스타그램 인증코드\n",
+      "인스타그램 알림\n",
+      "인스타그램 주소\n",
+      "인스타그램 정지\n",
+      "인스타그램 제한\n",
+      "인스타그램 줄바꾸기\n",
+      "인스타그램 종료\n",
+      "인스타그램 저장\n",
+      "인스타그램 좋아요\n",
+      "인스타그램 질문\n",
+      "인스타그램 전화\n",
+      "인스타그램 주식\n",
+      "인스타그램 차단\n",
+      "인스타그램 추천\n",
+      "인스타그램 친구추천\n",
+      "인스타그램 체험단\n",
+      "인스타그램 추천친구\n",
+      "인스타그램 차단 확인\n",
+      "인스타그램 창업자\n",
+      "인스타그램 친한친구\n",
+      "인스타그램 책\n",
+      "인스타그램 차단당하면\n",
+      "인스타그램 코드\n",
+      "인스타그램 카테고리\n",
+      "인스타그램 캡쳐\n",
+      "인스타그램 카드\n",
+      "인스타그램 커뮤니티 보호\n",
+      "인스타그램 코리아\n",
+      "인스타그램 카메라\n",
+      "인스타그램 캡션\n",
+      "인스타그램 컬렉션\n",
+      "인스타그램 캐시삭제\n",
+      "인스타그램 태그\n",
+      "인스타그램 팅김\n",
+      "인스타그램 튕김\n",
+      "인스타그램 트위터\n",
+      "인스타그램 통화\n",
+      "인스타그램 투표\n",
+      "인스타그램 테마\n",
+      "인스타그램 태그모음\n",
+      "인스타그램 탐색탭\n",
+      "인스타그램 태그 오류\n",
+      "인스타그램 폰트\n",
+      "인스타그램 피드\n",
+      "인스타그램 팔로워\n",
+      "인스타그램 프사\n",
+      "인스타그램 프로필 링크\n",
+      "인스타그램 프로필\n",
+      "인스타그램 팔로워 늘리기\n",
+      "인스타그램 필터\n",
+      "인스타그램 팔로잉\n",
+      "인스타그램 포토존\n",
+      "인스타그램 해시태그\n",
+      "인스타그램 하이라이트\n",
+      "인스타그램 하트\n",
+      "인스타그램 홍보\n",
+      "인스타그램 회사\n",
+      "인스타그램 활동중\n",
+      "인스타그램 화질\n",
+      "인스타그램 함께\n",
+      "인스타그램 효과\n",
+      "인스타그램 활동상태\n"
      ]
     }
    ],
@@ -26,13 +154,18 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "response = requests.get(\"https://ac.search.naver.com/nx/ac?q=%EC%9C%A0%ED%8A%9C%EB%B8%8C%20%E3%84%B1&con=0&frm=nv&ans=2&r_format=json&r_enc=UTF-8&r_unicode=0&t_koreng=1&run=2&rev=4&q_enc=UTF-8&st=100&_callback=\")\n",
-    "data = response.text\n",
-    "# data = data.replace('_jsonp_4(', '').replace(')', '')\n",
-    "data = json.loads(data)\n",
-    "items = data['items'][0]\n",
-    "for item in items:\n",
-    "    print(item[0])"
+    "sub_list = ['ㄱ', 'ㄴ', 'ㄷ', 'ㄹ', 'ㅁ', 'ㅂ', 'ㅅ','ㅇ', 'ㅈ', 'ㅊ', 'ㅋ', 'ㅌ', 'ㅍ', 'ㅎ']\n",
+    "main_keyword = input(\"검색어 입력:\")\n",
+    "\n",
+    "for sub in sub_list:\n",
+    "    keyword = main_keyword + ' ' + sub\n",
+    "    response = requests.get(f\"https://ac.search.naver.com/nx/ac?q={keyword}&con=0&frm=nv&ans=2&r_format=json&r_enc=UTF-8&r_unicode=0&t_koreng=1&run=2&rev=4&q_enc=UTF-8&st=100&_callback=\")\n",
+    "    data = response.text\n",
+    "    # data = data.replace('_jsonp_4(', '').replace(')', '')\n",
+    "    data = json.loads(data)\n",
+    "    items = data['items'][0]\n",
+    "    for item in items:\n",
+    "        print(item[0])"
    ]
   },
   {
