--- a/08.프로젝트/01.연관검색어크롤링.ipynb
+++ b/08.프로젝트/01.연관검색어크롤링.ipynb
@@ -2,161 +2,172 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "인스타그램 계정삭제\n",
-      "인스타그램 고객센터\n",
-      "인스타그램 광고\n",
-      "인스타그램 계정\n",
-      "인스타그램 계정 차단\n",
-      "인스타그램 계정 일시차단\n",
-      "인스타그램 계정 정지\n",
-      "인스타그램 가입\n",
-      "인스타그램 글씨체\n",
-      "인스타그램 계정 잠김\n",
-      "인스타그램 노래\n",
-      "인스타그램 누끼\n",
-      "인스타그램 노트\n",
-      "인스타그램 나무위키\n",
-      "인스타그램 나가짐\n",
-      "인스타그램 닉네임\n",
-      "인스타그램 나만보기\n",
-      "인스타그램 나중에 다시 시도하세요\n",
-      "인스타그램 딘\n",
-      "인스타그램 디엠\n",
-      "인스타그램 답장\n",
-      "인스타그램 돋보기\n",
-      "인스타그램 댓글\n",
-      "인스타그램 동의\n",
-      "인스타그램 디엠 알림\n",
-      "인스타그램 다운로드\n",
-      "인스타그램 디엠 답장\n",
-      "인스타그램 다운\n",
-      "인스타그램 링크\n",
-      "인스타그램 로그인 오류\n",
-      "인스타그램 로그인\n",
-      "인스타그램 로고\n",
-      "인스타그램 릴스\n",
-      "인스타그램 링크 오류\n",
-      "인스타그램 리그램\n",
-      "인스타그램 로그아웃\n",
-      "인스타그램 링크추가\n",
-      "인스타그램 로딩\n",
-      "인스타그램 메모\n",
-      "인스타그램 문의\n",
-      "인스타그램 메타\n",
-      "인스타그램 메세지\n",
-      "인스타그램 메일\n",
-      "인스타그램 마케팅\n",
-      "인스타그램 몰래보기\n",
-      "인스타그램 모바일\n",
-      "인스타그램 문제신고\n",
-      "인스타그램 메시지\n",
-      "인스타그램 비활성화\n",
-      "인스타그램 비밀번호 찾기\n",
-      "인스타그램 비공개\n",
-      "인스타그램 비밀번호 변경\n",
-      "인스타그램 비밀번호\n",
-      "인스타그램 부계정\n",
-      "인스타그램 복구\n",
-      "인스타그램 본사\n",
-      "인스타그램 방문확인\n",
-      "인스타그램 보안코드\n",
-      "인스타그램 스토리\n",
-      "인스타그램 사용자\n",
-      "인스타그램 삭제\n",
-      "인스타그램 신고\n",
-      "인스타그램 사이즈\n",
-      "인스타그램 스토리 몰래보기\n",
-      "인스타그램 스토리 오류\n",
-      "인스타그램 숨기기\n",
-      "인스타그램 신규\n",
-      "인스타그램 스토리 사이즈\n",
-      "인스타그램 오류\n",
-      "인스타그램 일시차단\n",
-      "인스타그램 아이디\n",
-      "인스타그램 익명\n",
-      "인스타그램 영어\n",
-      "인스타그램 이모티콘\n",
-      "인스타그램 언어\n",
-      "인스타그램 이름\n",
-      "인스타그램 인증코드\n",
-      "인스타그램 알림\n",
-      "인스타그램 주소\n",
-      "인스타그램 정지\n",
-      "인스타그램 제한\n",
-      "인스타그램 줄바꾸기\n",
-      "인스타그램 종료\n",
-      "인스타그램 저장\n",
-      "인스타그램 좋아요\n",
-      "인스타그램 질문\n",
-      "인스타그램 전화\n",
-      "인스타그램 주식\n",
-      "인스타그램 차단\n",
-      "인스타그램 추천\n",
-      "인스타그램 친구추천\n",
-      "인스타그램 체험단\n",
-      "인스타그램 추천친구\n",
-      "인스타그램 차단 확인\n",
-      "인스타그램 창업자\n",
-      "인스타그램 친한친구\n",
-      "인스타그램 책\n",
-      "인스타그램 차단당하면\n",
-      "인스타그램 코드\n",
-      "인스타그램 카테고리\n",
-      "인스타그램 캡쳐\n",
-      "인스타그램 카드\n",
-      "인스타그램 커뮤니티 보호\n",
-      "인스타그램 코리아\n",
-      "인스타그램 카메라\n",
-      "인스타그램 캡션\n",
-      "인스타그램 컬렉션\n",
-      "인스타그램 캐시삭제\n",
-      "인스타그램 태그\n",
-      "인스타그램 팅김\n",
-      "인스타그램 튕김\n",
-      "인스타그램 트위터\n",
-      "인스타그램 통화\n",
-      "인스타그램 투표\n",
-      "인스타그램 테마\n",
-      "인스타그램 태그모음\n",
-      "인스타그램 탐색탭\n",
-      "인스타그램 태그 오류\n",
-      "인스타그램 폰트\n",
-      "인스타그램 피드\n",
-      "인스타그램 팔로워\n",
-      "인스타그램 프사\n",
-      "인스타그램 프로필 링크\n",
-      "인스타그램 프로필\n",
-      "인스타그램 팔로워 늘리기\n",
-      "인스타그램 필터\n",
-      "인스타그램 팔로잉\n",
-      "인스타그램 포토존\n",
-      "인스타그램 해시태그\n",
-      "인스타그램 하이라이트\n",
-      "인스타그램 하트\n",
-      "인스타그램 홍보\n",
-      "인스타그램 회사\n",
-      "인스타그램 활동중\n",
-      "인스타그램 화질\n",
-      "인스타그램 함께\n",
-      "인스타그램 효과\n",
-      "인스타그램 활동상태\n"
+      "카카오톡 고객센터\n",
+      "카카오톡 관리자센터\n",
+      "카카오톡 가입\n",
+      "카카오톡 기프티콘\n",
+      "카카오톡 계정\n",
+      "카카오톡 광고\n",
+      "카카오톡 공감\n",
+      "카카오톡 글씨체\n",
+      "카카오톡 결제\n",
+      "카카오톡 계정 두개\n",
+      "카카오톡 나이\n",
+      "카카오톡 나가기\n",
+      "카카오톡 노래\n",
+      "카카오톡 낚시\n",
+      "카카오톡 내생일\n",
+      "카카오톡 느림\n",
+      "카카오톡 내보내기\n",
+      "카카오톡 녹음\n",
+      "카카오톡 날짜\n",
+      "카카오톡 나만보기\n",
+      "카카오톡 대표\n",
+      "카카오톡 다운로드\n",
+      "카카오톡 대출\n",
+      "카카오톡 등본\n",
+      "카카오톡 대화내용 복구\n",
+      "카카오톡 다운\n",
+      "카카오톡 동영상\n",
+      "카카오톡 대화 백업\n",
+      "카카오톡 데이터 삭제\n",
+      "카카오톡 대표이사\n",
+      "카카오톡 로그아웃\n",
+      "카카오톡 로그인\n",
+      "카카오톡 로고\n",
+      "카카오톡 링크\n",
+      "카카오톡 라인\n",
+      "카카오톡 랜덤선물\n",
+      "카카오톡 렉\n",
+      "카카오톡 룰렛\n",
+      "카카오톡 라이브톡\n",
+      "카카오톡 라이언\n",
+      "카카오톡 멀티프로필\n",
+      "카카오톡 민증\n",
+      "카카오톡 먹통\n",
+      "카카오톡 문의\n",
+      "카카오톡 무료 이모티콘\n",
+      "카카오톡 명의변경\n",
+      "카카오톡 메세지 삭제\n",
+      "카카오톡 미리보기\n",
+      "카카오톡 메일\n",
+      "카카오톡 만료된 파일\n",
+      "카카오톡 백업\n",
+      "카카오톡 보상\n",
+      "카카오톡 복구\n",
+      "카카오톡 배경화면\n",
+      "카카오톡 비즈니스\n",
+      "카카오톡 백신\n",
+      "카카오톡 배경\n",
+      "카카오톡 복원\n",
+      "카카오톡 부계정\n",
+      "카카오톡 비밀채팅\n",
+      "카카오톡 선물하기\n",
+      "카카오톡 생일\n",
+      "카카오톡 사진\n",
+      "카카오톡 삭제\n",
+      "카카오톡 선물하기 환불\n",
+      "카카오톡 선물\n",
+      "카카오톡 선물 환불\n",
+      "카카오톡 송금\n",
+      "카카오톡 사퇴\n",
+      "카카오톡 신분증\n",
+      "카카오톡 이모티콘\n",
+      "카카오톡 오류\n",
+      "카카오톡 오픈채팅\n",
+      "카카오톡 이모티콘샵\n",
+      "카카오톡 알림\n",
+      "카카오톡 인증서\n",
+      "카카오톡 아이디\n",
+      "카카오톡 이모티콘 플러스\n",
+      "카카오톡 이태원\n",
+      "카카오톡 용량\n",
+      "카카오톡 주식\n",
+      "카카오톡 주가\n",
+      "카카오톡 장애\n",
+      "카카오톡 정산하기\n",
+      "카카오톡 정지\n",
+      "카카오톡 지갑\n",
+      "카카오톡 저장공간\n",
+      "카카오톡 진동\n",
+      "카카오톡 잠금\n",
+      "카카오톡 정산\n",
+      "카카오톡 차단\n",
+      "카카오톡 채널\n",
+      "카카오톡 친구추가\n",
+      "카카오톡 친구삭제\n",
+      "카카오톡 초코\n",
+      "카카오톡 채널 관리자센터\n",
+      "카카오톡 차단 확인방법\n",
+      "카카오톡 추천친구\n",
+      "카카오톡 친구추천\n",
+      "카카오톡 채널추가\n",
+      "카카오톡 카카오스토리\n",
+      "카카오톡 캐릭터\n",
+      "카카오톡 쿠폰\n",
+      "카카오톡 캘린더\n",
+      "카카오톡 캡쳐\n",
+      "카카오톡 카드\n",
+      "카카오톡 캐시\n",
+      "카카오톡 키보드\n",
+      "카카오톡 캐시삭제\n",
+      "카카오톡 코로나\n",
+      "카카오톡 테마\n",
+      "카카오톡 탈퇴\n",
+      "카카오톡 톡서랍\n",
+      "카카오톡 투표\n",
+      "카카오톡 테마 다운\n",
+      "카카오톡 테마 공유\n",
+      "카카오톡 테마 아이폰\n",
+      "카카오톡 테마 심플\n",
+      "카카오톡 테마 추천\n",
+      "카카오톡 택배\n",
+      "카카오톡 프로필\n",
+      "카카오톡 플러스친구\n",
+      "카카오톡 페이스톡\n",
+      "카카오톡 프사\n",
+      "카카오톡 플러스친구 관리자\n",
+      "카카오톡 피해\n",
+      "카카오톡 피싱\n",
+      "카카오톡 프로필 사진\n",
+      "카카오톡 폰트\n",
+      "카카오톡 프로필 비공개\n",
+      "카카오톡 화재\n",
+      "카카오톡 해킹\n",
+      "카카오톡 환불\n",
+      "카카오톡 할로윈\n",
+      "카카오톡 하트\n",
+      "카카오톡 해외\n",
+      "카카오톡 환불머니\n",
+      "카카오톡 회원가입\n",
+      "카카오톡 회장\n",
+      "카카오톡 화면\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "import json\n",
+    "import openpyxl\n",
     "\n",
     "sub_list = ['ㄱ', 'ㄴ', 'ㄷ', 'ㄹ', 'ㅁ', 'ㅂ', 'ㅅ','ㅇ', 'ㅈ', 'ㅊ', 'ㅋ', 'ㅌ', 'ㅍ', 'ㅎ']\n",
     "main_keyword = input(\"검색어 입력:\")\n",
     "\n",
+    "wb = openpyxl.Workbook()\n",
+    "ws = wb.active\n",
+    "ws.title = main_keyword\n",
+    "\n",
+    "ws['A1'] = main_keyword + '연관키워드 추출 결과'\n",
+    "ws.append(['순번', '연관키워드'])\n",
+    "\n",
+    "count = 1\n",
     "for sub in sub_list:\n",
     "    keyword = main_keyword + ' ' + sub\n",
     "    response = requests.get(f\"https://ac.search.naver.com/nx/ac?q={keyword}&con=0&frm=nv&ans=2&r_format=json&r_enc=UTF-8&r_unicode=0&t_koreng=1&run=2&rev=4&q_enc=UTF-8&st=100&_callback=\")\n",
@@ -165,7 +176,11 @@
     "    data = json.loads(data)\n",
     "    items = data['items'][0]\n",
     "    for item in items:\n",
-    "        print(item[0])"
+    "        print(item[0])\n",
+    "        ws.append([count, item[0]])\n",
+    "        count += 1\n",
+    "\n",
+    "wb.save(f'{main_keyword} 연관키워드.xlsx')"
    ]
   },
   {
